// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deepFindAllByKey addBlastLinksToFreeText should generate parse the text and generate link 1`] = `
Array [
  Array [
    "SOME TEXT ",
    <Link
      to="/blast?ids=UP_ACCESSION[10-34]"
    >
      10-34
    </Link>,
    "",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle no positions 1`] = `
Array [
  Array [
    "SOME TEXT",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle positions at the beggining 1`] = `
Array [
  Array [
    "",
    <Link
      to="/blast?ids=UP_ACCESSION[10-34]"
    >
      10-34
    </Link>,
    " SOME TEXT",
  ],
]
`;

exports[`deepFindAllByKey addBlastLinksToFreeText should handle positions at the end 1`] = `
Array [
  Array [
    "SOME TEXT ",
    <Link
      to="/blast?ids=UP_ACCESSION[10-34]"
    >
      10-34
    </Link>,
    "",
  ],
]
`;
